Bug#47289 ndb_restore can crash if a hidden blob table is missing